work around crash when starting a download if download folder not specified in IC preferences (e.g. a fresh user account) b=265903 sr=pinkerton